# rename-tool

./: AUTHORS  ChangeLog.txt  Makefile  NEWS  README.en.txt  README.md  TODO  configure.ac  fixtoken.c  main.c  rename-tool.1  rename-tool.lsm  renamex.1
man/: rename-tool.1
src/: config.h  regex.c  rename.c  rename.h
